ErrorDispose/src/main/java/com/example/error/demo/ErrorObject.java
package com.example.error.demo;

public class ErrorObject {
    public String url;
    public String msg;
}
